force-app/main/default/objects/Donation_Processor_Assignment__c/Donation_Processor_Assignment__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between the processor and the donation.</description>
    <label>Donation Processor Assignment</label>
    <nameField>
        <displayFormat>DPA-{0000}</displayFormat>
        <label>Donation Processor Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Processor Assignment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>