force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Assignment_Context__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Context__c</fullName>
    <description>Field provides a visual indicator for the type of donation parent relationship.</description>
    <formula>IF(NOT(ISBLANK(Donation__c)), &quot;Donation&quot;, IF(NOT(ISBLANK(Lab__c)), &quot;Lab&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field provides a visual indicator for the type of donation parent relationship.</inlineHelpText>
    <label>Assignment Context</label>
    <type>Text</type>
</CustomField>