force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Date_Pooled__c.field-meta.xml
<CustomField>
    <fullName>Date_Pooled__c</fullName>
    <description>Date the donation was pooled.</description>
    <label>Date Pooled</label>
    <type>Date</type>
</CustomField>