force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated donation record for this donation process assignment.</description>
    <inlineHelpText>The associated donation record for this donation process assignment.</inlineHelpText>
    <label>Donation</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Donation Processor Assignment</relationshipLabel>
    <relationshipName>Donation_Processor_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>