force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Component__c.field-meta.xml
<CustomField>
    <fullName>Donation_Component__c</fullName>
    <description>This is the single component of the donation that is being processed.</description>
    <inlineHelpText>This is the single component of the donation that is being processed.</inlineHelpText>
    <label>Donation Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exosomes</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>Whole Umbilical Cord</fullName>
            </value>
            <value>
                <fullName>Amnion/Chorion</fullName>
            </value>
            <value>
                <fullName>Placenta</fullName>
            </value>
            <value>
                <fullName>Umbilical Cord</fullName>
                <isActive>false</isActive>
                <label>Umbilical Cord</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>