force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Component_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Donation_Component_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator that the donation component was rejected.</description>
    <inlineHelpText>Indicator that the donation component was rejected.</inlineHelpText>
    <label>Donation Component Rejection</label>
    <type>Checkbox</type>
</CustomField>