force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Component_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Component_Rejection_Date__c</fullName>
    <description>The date the component was rejected.</description>
    <inlineHelpText>The date the component was rejected.</inlineHelpText>
    <label>Donation Component Rejection Date</label>
    <type>Date</type>
</CustomField>