force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Component_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Donation_Component_Rejection_Reason__c</fullName>
    <description>The reason the donation component was rejected.</description>
    <inlineHelpText>The reason the donation component was rejected.</inlineHelpText>
    <label>Donation Component Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>