force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Processor__c.field-meta.xml
<CustomField>
    <fullName>Donation_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the processor for this donation component.</description>
    <inlineHelpText>This is the processor for this donation component.</inlineHelpText>
    <label>Donation Processor</label>
    <referenceTo>Donation_Processor__c</referenceTo>
    <relationshipLabel>Donation Processor Assignment</relationshipLabel>
    <relationshipName>Donation_Processor_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>