force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Processor_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Processor_Status__c</fullName>
    <description>This is the state of the donation component.</description>
    <inlineHelpText>This is the state of the donation component.</inlineHelpText>
    <label>Donation Processor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>