force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Donation_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related shipment for the donation.</description>
    <label>Donation Shipment</label>
    <referenceTo>Donation_Shipment__c</referenceTo>
    <relationshipLabel>Donation Processor Assignment</relationshipLabel>
    <relationshipName>Donation_Processor_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>