force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Status__c</fullName>
    <description>This is the status of the Donation.</description>
    <inlineHelpText>This is the status of the Donation.</inlineHelpText>
    <label>Donation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>IDM Pending</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>