force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date the donation expires.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>