force-app/main/default/objects/Donation_Processor_Assignment__c/fields/IDM__c.field-meta.xml
<CustomField>
    <fullName>IDM__c</fullName>
    <description>IDM associated with the donation.</description>
    <inlineHelpText>IDM associated with the donation.</inlineHelpText>
    <label>IDM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>