force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>The number for the invoice that is associated with the donation.</description>
    <inlineHelpText>The number for the invoice that is associated with the donation.</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>