force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <description>The amount the donation was invoiced.</description>
    <inlineHelpText>The amount the donation was invoiced.</inlineHelpText>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>