force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <description>The date the donation was invoiced.</description>
    <inlineHelpText>The date the donation was invoiced.</inlineHelpText>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>