force-app/main/default/objects/Donation_Processor_Assignment__c/fields/ISBT__c.field-meta.xml
<CustomField>
    <fullName>ISBT__c</fullName>
    <description>The ISBT for this donation component.</description>
    <inlineHelpText>The ISBT for this donation component.</inlineHelpText>
    <label>ISBT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>