force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Lab record for the Donation Processor Assignment.</description>
    <inlineHelpText>Associated Lab record for the Donation Processor Assignment.</inlineHelpText>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>Donation Processor Assignment</relationshipLabel>
    <relationshipName>Donation_Processor_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>