force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <description>Lot # for the Donation</description>
    <label>Lot #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>