force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Microbiology__c.field-meta.xml
<CustomField>
    <fullName>Microbiology__c</fullName>
    <description>Microbiology testing status for the donation shipment item.</description>
    <inlineHelpText>This indicates microbiology test status (Pending, Negative, or Positive).</inlineHelpText>
    <label>Microbiology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>