force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Number_Of_Vials__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Vials__c</fullName>
    <description>Number of vials for the donation.</description>
    <label>Number Of Vials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>