force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>The date the donation was paid.</description>
    <inlineHelpText>The date the donation was paid.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>