force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <description>The date the donation was shipped.</description>
    <inlineHelpText>The date the donation was shipped.</inlineHelpText>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>