force-app/main/default/objects/Donation_Processor_Assignment__c/fields/TNC_Number__c.field-meta.xml
<CustomField>
    <fullName>TNC_Number__c</fullName>
    <description>This field will hold the TNC number for the donation.</description>
    <inlineHelpText>This field will hold the TNC number for the donation.</inlineHelpText>
    <label>TNC Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>