force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Shipment tracking number.</description>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>