force-app/main/default/objects/Donation_Processor_Assignment__c/fields/Volume_of_Plasma__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Plasma__c</fullName>
    <description>This field will hold the volume of the plasma for the donation.</description>
    <inlineHelpText>This field will hold the volume of the plasma for the donation.</inlineHelpText>
    <label>Volume of Plasma (in ml)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>