force-app/main/default/objects/Donation_Processor_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Context__c</columns>
    <columns>Donation_Component__c</columns>
    <columns>Donation_Processor__c</columns>
    <columns>Donation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>