force-app/main/default/objects/Donation_Processor_Assignment__c/listViews/Shipped_Pinnacle.listView-meta.xml
<ListView>
    <fullName>Shipped_Pinnacle</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Context__c</columns>
    <columns>Donation_Component__c</columns>
    <columns>Donation_Processor__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoiced_Amount__c</columns>
    <columns>Invoiced_Date__c</columns>
    <columns>Lab__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Shipped_Date__c</columns>
    <columns>ISBT__c</columns>
    <columns>Donation_Component_Rejection__c</columns>
    <columns>Donation_Component_Rejection_Date__c</columns>
    <columns>Donation_Component_Rejection_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donation_Processor__c</field>
        <operation>equals</operation>
        <value>Pinnacle</value>
    </filters>
    <filters>
        <field>Donation_Status__c</field>
        <operation>equals</operation>
        <value>Shipped</value>
    </filters>
    <label>Shipped - Pinnacle</label>
</ListView>