force-app/main/default/objects/Donation_Processor_Assignment__c/listViews/Shipped_Surgenex.listView-meta.xml
<ListView>
    <fullName>Shipped_Surgenex</fullName>
    <columns>Donation__c</columns>
    <columns>NAME</columns>
    <columns>Assignment_Context__c</columns>
    <columns>Donation_Component__c</columns>
    <columns>Donation_Processor__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoiced_Amount__c</columns>
    <columns>Invoiced_Date__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Shipped_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donation_Processor__c</field>
        <operation>equals</operation>
        <value>Surgenex</value>
    </filters>
    <filters>
        <field>Donation_Status__c</field>
        <operation>equals</operation>
        <value>Shipped</value>
    </filters>
    <label>Shipped - Surgenex</label>
</ListView>